--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,25 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
-    "axios": "^1.6.8",
-    "@tanstack/react-query": "^5.32.0",
-    "react-hot-toast": "^2.4.1"
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^5.0.0-beta.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0",
-    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^5.0.0-beta.5"
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
-} 
+}
